# FreightPulse

./: README.md  pyproject.toml  requirements.txt
Data/FAF5.7.1_HiLoForecasts/: HiLo_missing_summary.csv  HiLo_unique_summary.csv
Data/FAF5.7.1_Reprocessed_1997-2012_State/: FAF5_metadata.xlsx  Reprocessed_missing_summary.csv  Reprocessed_unique_summary.csv
Data/processed/evaluation/: arima_corridor_1_metrics.json  arima_corridor_5_metrics.json  bts_benchmark_scores.csv  (+8 more)
Notebooks/: 01_eda_faf_hilo.ipynb  06_arima_experiments.ipynb
dags/: common.py  evaluate.py  ingest_faf.py  ingest_fred.py  train.py  transform.py
mlruns/: mlflow.db
src/: __init__.py
src/dashboard/: app.py  data_access.py
src/evaluation/: bts_benchmark.py  holdout.py  metrics.py  model_comparison.py
src/features/: corridor_builder.py  derived_features.py  economic_features.py  lag_features.py  rolling_features.py  target_builder.py
src/ingestion/: faf_loader.py  fred_loader.py  historical_loader.py  metadata_loader.py
src/models/: arima_model.py  base.py  common.py  forecasting.py  model_registry.py  prophet_model.py  xgboost_model.py
src/storage/: __init__.py  db_manager.py  feature_layer.py  raw_layer.py  schema_manager.py  staged_layer.py
src/utils/: config.py  corridor_config.py  paths.py
tests/: __init__.py  conftest.py  test_config.py  test_corridor_builder.py  test_evaluation.py  test_faf_loader.py  test_feature_engineering.py  test_fred_loader.py  test_historical_loader.py  test_metadata_loader.py  test_metrics.py  test_models.py  test_schema_manager.py
(+52 files in other folders)
