[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freightpulse"
version = "0.1.0"
description = "Multi-model freight demand forecasting engine built on FAF5, FRED, DuckDB, and ML."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Satwik" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
